[gd_scene load_steps=75 format=2]

[ext_resource path="res://Player/Player2.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://Hitbox.Hurtbox/Hitbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Hitbox.Hurtbox/Hurtbox.tscn" type="PackedScene" id=5]

[sub_resource type="Animation" id=61]
resource_name = "BlockDown"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 63 ]
}

[sub_resource type="Animation" id=62]
resource_name = "BlockLeft"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 62 ]
}

[sub_resource type="Animation" id=63]
resource_name = "BlockRight"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 60 ]
}

[sub_resource type="Animation" id=64]
resource_name = "BlockUp"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 61 ]
}

[sub_resource type="Animation" id=2]
resource_name = "CastingDown"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 36, 21, 38, 39 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "ability_state_finnish"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "CastingL"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 32, 15, 35 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "ability_state_finnish"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "CastingR"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 24, 3, 27 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "ability_state_finnish"
} ]
}

[sub_resource type="Animation" id=5]
resource_name = "CastingUp"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 28, 10, 31 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "ability_state_finnish"
} ]
}

[sub_resource type="Animation" id=6]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 18 ]
}

[sub_resource type="Animation" id=7]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 12 ]
}

[sub_resource type="Animation" id=8]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=9]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}

[sub_resource type="Animation" id=10]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 13, 14, 15, 16, 17, 12 ]
}

[sub_resource type="Animation" id=11]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 0 ]
}

[sub_resource type="Animation" id=12]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 8, 9, 10, 11, 6 ]
}

[sub_resource type="Animation" id=13]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 19, 20, 21, 22, 23, 18 ]
}

[sub_resource type="Animation" id=14]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 36, 37, 38, 39 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_state_finnish"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitboxPivot:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HitboxPivot/SwordHitBox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("HitboxPivot/SwordHitBox/2:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=15]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34, 35 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_state_finnish"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitboxPivot:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 180.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HitboxPivot/SwordHitBox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("HitboxPivot/SwordHitBox/2:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=16]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_state_finnish"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitboxPivot:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HitboxPivot/SwordHitBox/2:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("HitboxPivot/SwordHitBox/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=17]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 28, 29, 30, 31 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_state_finnish"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitboxPivot:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -90.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HitboxPivot/SwordHitBox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("HitboxPivot/SwordHitBox/2:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=18]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 55, 56, 57, 58, 59 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "roll_animation_finnished"
} ]
}

[sub_resource type="Animation" id=19]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 50, 51, 52, 53, 54 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "roll_animation_finnished"
} ]
}

[sub_resource type="Animation" id=20]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 40, 41, 42, 43, 44 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "roll_animation_finnished"
} ]
}

[sub_resource type="Animation" id=21]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 45, 46, 47, 48, 49 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "roll_animation_finnished"
} ]
}

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "attackLeft"

[sub_resource type="AnimationNodeAnimation" id=23]
animation = "attackRight"

[sub_resource type="AnimationNodeAnimation" id=24]
animation = "attackDown"

[sub_resource type="AnimationNodeAnimation" id=25]
animation = "attckUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=26]
blend_point_0/node = SubResource( 22 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 23 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 24 )
blend_point_2/pos = Vector2( 0, 1.1 )
blend_point_3/node = SubResource( 25 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=65]
animation = "BlockDown"

[sub_resource type="AnimationNodeAnimation" id=66]
animation = "BlockUp"

[sub_resource type="AnimationNodeAnimation" id=67]
animation = "BlockLeft"

[sub_resource type="AnimationNodeAnimation" id=68]
animation = "BlockRight"

[sub_resource type="AnimationNodeBlendSpace2D" id=69]
blend_point_0/node = SubResource( 65 )
blend_point_0/pos = Vector2( 0, 0.8 )
blend_point_1/node = SubResource( 66 )
blend_point_1/pos = Vector2( 0, -0.8 )
blend_point_2/node = SubResource( 67 )
blend_point_2/pos = Vector2( -1, 0 )
blend_point_3/node = SubResource( 68 )
blend_point_3/pos = Vector2( 1, 0 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )

[sub_resource type="AnimationNodeAnimation" id=27]
animation = "CastingDown"

[sub_resource type="AnimationNodeAnimation" id=28]
animation = "CastingUp"

[sub_resource type="AnimationNodeAnimation" id=29]
animation = "CastingL"

[sub_resource type="AnimationNodeAnimation" id=30]
animation = "CastingR"

[sub_resource type="AnimationNodeBlendSpace2D" id=31]
blend_point_0/node = SubResource( 27 )
blend_point_0/pos = Vector2( 0, 1.1 )
blend_point_1/node = SubResource( 28 )
blend_point_1/pos = Vector2( 0, -1.1 )
blend_point_2/node = SubResource( 29 )
blend_point_2/pos = Vector2( -1, 0 )
blend_point_3/node = SubResource( 30 )
blend_point_3/pos = Vector2( 1, 0 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )

[sub_resource type="AnimationNodeAnimation" id=32]
animation = "rollLeft"

[sub_resource type="AnimationNodeAnimation" id=33]
animation = "rollRight"

[sub_resource type="AnimationNodeAnimation" id=34]
animation = "rollDown"

[sub_resource type="AnimationNodeAnimation" id=35]
animation = "rollUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=36]
blend_point_0/node = SubResource( 32 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 33 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 34 )
blend_point_2/pos = Vector2( 0, 1.1 )
blend_point_3/node = SubResource( 35 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=37]
animation = "Run left"

[sub_resource type="AnimationNodeAnimation" id=38]
animation = "Rundown"

[sub_resource type="AnimationNodeAnimation" id=39]
animation = "Run right"

[sub_resource type="AnimationNodeAnimation" id=40]
animation = "Run up"

[sub_resource type="AnimationNodeBlendSpace2D" id=41]
blend_point_0/node = SubResource( 37 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 38 )
blend_point_1/pos = Vector2( 0, 1.1 )
blend_point_2/node = SubResource( 39 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 40 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=42]
animation = "IdleLeft"

[sub_resource type="AnimationNodeAnimation" id=43]
animation = "IdleRight"

[sub_resource type="AnimationNodeAnimation" id=44]
animation = "IdleDown"

[sub_resource type="AnimationNodeAnimation" id=45]
animation = "IdleUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=46]
blend_point_0/node = SubResource( 42 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 43 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 44 )
blend_point_2/pos = Vector2( 0, 1.1 )
blend_point_3/node = SubResource( 45 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=47]

[sub_resource type="AnimationNodeStateMachineTransition" id=48]

[sub_resource type="AnimationNodeStateMachineTransition" id=49]

[sub_resource type="AnimationNodeStateMachineTransition" id=50]

[sub_resource type="AnimationNodeStateMachineTransition" id=51]

[sub_resource type="AnimationNodeStateMachineTransition" id=52]

[sub_resource type="AnimationNodeStateMachineTransition" id=53]

[sub_resource type="AnimationNodeStateMachineTransition" id=54]

[sub_resource type="AnimationNodeStateMachineTransition" id=70]

[sub_resource type="AnimationNodeStateMachineTransition" id=71]

[sub_resource type="AnimationNodeStateMachine" id=55]
states/Attack/node = SubResource( 26 )
states/Attack/position = Vector2( 583, 233 )
states/Block/node = SubResource( 69 )
states/Block/position = Vector2( 770.57, 219.356 )
states/Casting/node = SubResource( 31 )
states/Casting/position = Vector2( 418.57, 143 )
states/Roll/node = SubResource( 36 )
states/Roll/position = Vector2( 583, 68 )
states/Run/node = SubResource( 41 )
states/Run/position = Vector2( 747, 143 )
states/idle/node = SubResource( 46 )
states/idle/position = Vector2( 583, 143 )
transitions = [ "idle", "Run", SubResource( 47 ), "Run", "idle", SubResource( 48 ), "Attack", "idle", SubResource( 49 ), "idle", "Attack", SubResource( 50 ), "Roll", "idle", SubResource( 51 ), "idle", "Roll", SubResource( 52 ), "Casting", "idle", SubResource( 53 ), "idle", "Casting", SubResource( 54 ), "idle", "Block", SubResource( 70 ), "Block", "idle", SubResource( 71 ) ]
start_node = "idle"
graph_offset = Vector2( 121.57, 105.356 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=56]

[sub_resource type="CapsuleShape2D" id=57]
radius = 4.0
height = 4.0

[sub_resource type="CapsuleShape2D" id=58]
height = 12.0

[sub_resource type="CapsuleShape2D" id=59]
radius = 3.0
height = 13.5

[sub_resource type="CapsuleShape2D" id=60]
radius = 5.91086
height = 6.79517

[node name="Player1" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -10 )
texture = ExtResource( 1 )
hframes = 64
frame = 63

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/BlockDown = SubResource( 61 )
anims/BlockLeft = SubResource( 62 )
anims/BlockRight = SubResource( 63 )
anims/BlockUp = SubResource( 64 )
anims/CastingDown = SubResource( 2 )
anims/CastingL = SubResource( 3 )
anims/CastingR = SubResource( 4 )
anims/CastingUp = SubResource( 5 )
anims/IdleDown = SubResource( 6 )
anims/IdleLeft = SubResource( 7 )
anims/IdleRight = SubResource( 8 )
anims/IdleUp = SubResource( 9 )
"anims/Run left" = SubResource( 10 )
"anims/Run right" = SubResource( 11 )
"anims/Run up" = SubResource( 12 )
anims/Rundown = SubResource( 13 )
anims/attackDown = SubResource( 14 )
anims/attackLeft = SubResource( 15 )
anims/attackRight = SubResource( 16 )
anims/attckUp = SubResource( 17 )
anims/rollDown = SubResource( 18 )
anims/rollLeft = SubResource( 19 )
anims/rollRight = SubResource( 20 )
anims/rollUp = SubResource( 21 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 55 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 56 )
parameters/Attack/blend_position = Vector2( -0.110092, -0.362428 )
parameters/Block/blend_position = Vector2( 0, 1.07457 )
parameters/Casting/blend_position = Vector2( 0.00156009, 1 )
parameters/Roll/blend_position = Vector2( -0.209048, -0.23526 )
parameters/Run/blend_position = Vector2( -0.546763, 0.480795 )
parameters/idle/blend_position = Vector2( -1, 1 )
__meta__ = {
"_editor_description_": "aad"
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, -1 )
rotation = -1.5708
shape = SubResource( 57 )

[node name="HitboxPivot" type="Position2D" parent="."]
position = Vector2( 0, -5 )
rotation = 1.5708

[node name="SwordHitBox" parent="HitboxPivot" instance=ExtResource( 4 )]
position = Vector2( 15, 0 )
collision_mask = 8
dps = 2

[node name="CollisionShape2D" parent="HitboxPivot/SwordHitBox" index="0"]
shape = SubResource( 58 )
disabled = true

[node name="2" type="CollisionShape2D" parent="HitboxPivot/SwordHitBox"]
position = Vector2( -10, 0 )
scale = Vector2( 2.2, 2.1 )
shape = SubResource( 59 )
disabled = true

[node name="Hurtbox" parent="." instance=ExtResource( 5 )]
collision_layer = 4

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( -0.397514, -6.34449 )
shape = SubResource( 60 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="RollTimer" type="Timer" parent="."]

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="timeout" from="RollTimer" to="." method="_on_Timer_timeout"]

[editable path="HitboxPivot/SwordHitBox"]
[editable path="Hurtbox"]
